# cpp_software_renderer

./: CMakeLists.txt  README.md  TODO.md
demos/: CMakeLists.txt
demos/01_primitives/: CMakeLists.txt  primitives.cpp
demos/02_sprites/: CMakeLists.txt  sprites.cpp
demos/03_benchmark/: CMakeLists.txt  benchmark.cpp
demos/04_paint/: CMakeLists.txt  paint.cpp
demos/05_clip/: CMakeLists.txt  clip.cpp
examples/: CMakeLists.txt  demo.cpp
include/sr/: sr.h
include/sr/core/: aabb.h  color.h  error.h  macros.h  rect.h  types.h  vec.h
include/sr/gfx/: framebuffer.h  rasterizer.h  render_state.h  renderer.h  texture.h
include/sr/platform/: input.h  window.h
src/core/: color.cpp
src/gfx/: framebuffer.cpp  rasterizer.cpp  renderer.cpp  texture.cpp
src/platform/: window.cpp
test/: CMakeLists.txt  test_color.cpp  test_framebuffer.cpp  test_raster.cpp  test_rect.cpp  test_texture.cpp  test_vec.cpp
