function(sr_add_demo TARGET_NAME SOURCE_NAME)
    add_executable(${TARGET_NAME} ${SOURCE_NAME})
    target_link_libraries(${TARGET_NAME} PRIVATE sr)
    target_compile_options(${TARGET_NAME} PRIVATE -Wall -Wextra -pedantic)
endfunction()

add_subdirectory(01_primitives)
add_subdirectory(02_sprites)
add_subdirectory(03_benchmark)
add_subdirectory(04_paint)
add_subdirectory(05_clip)